# tai-skeleton

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
examples/: README.md  manifest.yml
examples/hello/: manifest.yml
examples/toolbox/: README.md  manifest.yml
src/tai42_skeleton/: __init__.py  asgi.py
src/tai_skeleton/: __init__.py  asgi.py
tests/: _helpers.py  conftest.py
tests/_fakes/: beat_backend.py  bus.py  interactions_redis.py  tool_runs_redis.py
tests/access_control/: conftest.py  test_access_control.py  test_adapter_settings_user_utils.py  test_backend.py  test_claim_links.py  test_isolation_under_fire.py  test_management.py  test_mcp_auth_e2e.py  test_middleware.py  test_path_canon.py  test_policy_provider.py  test_policy_store.py  test_projection.py  test_role_management.py  test_roles.py  test_startup.py  test_store.py  test_verifier_unit.py
tests/agent/: _bad_bakeable_fixtures.py  _fixtures.py  _fixtures2.py  test_agent_contract.py  test_run_tool_synthesis.py
tests/app/: test_asgi.py  test_bus.py  test_bus_subscription.py  test_clients.py  test_completions.py  test_conformance.py  test_facets.py  test_importer.py  test_instance.py  test_kind_status.py  test_lifecycle.py  test_manifest_extensions.py  test_output_schema.py  test_preset_mcp_reconcile.py  test_reload_tool_idempotence.py  test_reprobe_task.py  test_route_actions.py  test_route_defaults.py  test_route_registry.py  test_server.py  test_sessions.py  test_sub_mcp_app.py
tests/authz/: conftest.py  test_check.py  test_d1_authz_sweep.py  test_execution_agent_run.py  test_execution_fire_conditions.py  test_execution_identity.py  test_execution_seam.py  test_middleware.py  test_middleware_fence.py  test_resolver.py  test_token_free.py
tests/backend/: test_backend.py  test_settings.py
tests/backup/: test_registry.py  test_webhooks_section.py
tests/channels/: conftest.py  test_channel_loop.py  test_notifications_sink.py  test_notify.py  test_registry.py
tests/cli/: conftest.py  remote_harness.py  test_app.py  test_backend.py  test_boot_rules.py  test_client.py  test_common_helpers.py  test_context.py  test_market_commands.py  test_mcp_app.py  test_metrics.py  test_metrics_identity.py  test_native_catalog.py  test_native_completion.py  test_native_db.py  test_native_doctor.py  test_native_extra.py  test_native_version.py  test_offline_validate.py  test_openapi.py  test_remote_commands.py  test_remote_commands_extra.py  test_remote_streaming.py  test_render.py  test_roles_commands.py  test_route_parity.py
tests/config/: test_config.py  test_config_mode_validation.py  test_file_manager.py  test_service.py  test_write_seal.py
tests/connectors/: conftest.py  test_lua_scripts.py  test_meta_log_redactor.py  test_oauth_client.py  test_oauth_crypto.py  test_oauth_redirect.py  test_oauth_state.py  test_providers_registry.py  test_runtime_launch.py  test_runtime_locks.py  test_runtime_probe.py  test_runtime_resolver.py  test_service_connection_service.py  test_service_manifest_writer.py  test_settings.py  test_stdio_launcher.py  test_store_backup.py  test_store_catalog_store.py  test_store_catalog_write.py  test_store_persistence.py  test_store_redis_pg.py  test_store_sources_store.py  test_token_injection.py  test_token_store_detenant_pooling.py
tests/conversations/: conftest.py  fake_record_redis.py  test_api_door_authz.py  test_api_door_surface.py  test_backup.py  test_caps.py  test_delivery_helpers.py  test_delivery_sweep.py  test_facet.py  test_in_memory_manager.py  test_lua_scripts.py  test_operations.py  test_read_doors.py  test_records.py  test_redis_manager.py  test_redis_manager_lua.py  test_route_bind_authz.py  test_settings.py  test_startup.py  test_turn.py  test_turn_execution_identity.py
tests/examples/: test_toolbox_example.py
tests/extensions/: conftest.py  test_ask_external_extension.py  test_extensions.py  test_monitor_extension.py  test_registry_full.py
tests/fixtures/: dummy_agent.py
tests/hooks/: conftest.py  test_base_firing.py  test_cache_and_settings.py  test_execution_fire.py  test_hooks_manager.py  test_in_memory_branches.py  test_offloop_jq_eval.py  test_payload_parser.py  test_redis_manager.py  test_topic_verifier_store.py  test_trigger_links.py
tests/interactions/: test_backlog.py  test_blocking_timeouts.py  test_contract_conformance.py  test_elicit_bridge.py  test_external_helper.py  test_external_settings.py  test_external_store.py  test_helper_build_payload.py  test_phantom_purge.py  test_sensitive.py  test_store_and_helper.py  test_store_branches.py
tests/manifest/: test_manifest.py  test_manifest_edge.py
tests/marketplace/: __init__.py  _specs.py  test_advisories.py  test_client.py  test_installer.py  test_manifest_patch.py  test_pip.py  test_store.py
tests/middleware/: conftest.py  test_body_limit.py  test_rate_limit.py
tests/monitoring/: test_monitoring.py  test_noop_methods.py
tests/operations/: conftest.py  test_adapter.py  test_agents_ops.py  test_api_keys_ops.py  test_authority.py  test_backup_ops.py  test_checkpoints_ops.py  test_config_ops.py  test_connectors_ops.py  test_d1_projection_live.py  test_decorator_registry.py  test_errors.py  test_hooks_ops.py  test_integration.py  test_interactions_ops.py  test_isolation_under_fire.py  test_manifest_ops.py  test_notifications_ops.py  test_openapi_destructive.py  test_presets_ops.py  test_projection.py  test_resources_ops.py  test_schedules_ops.py  test_storage_ops.py  test_submitted_tool_authz.py  test_templates_ops.py  test_tool_extensions_ops.py  test_tool_runs_ops.py  test_tools_ops.py
tests/plugins/: test_registry.py  test_serving.py
tests/presets/: _ext_fixtures.py  _fixtures.py  conftest.py  test_bind.py  test_manager.py  test_preset_store.py  test_startup.py
tests/routers/: _auth_boundary.py  _authoring_fixtures.py  _ext_dup.py  _ext_fixtures.py  _structured_fixtures.py  conftest.py  test_agents.py  (+61 more)
(+654 files in other folders)
